--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -43,12 +43,18 @@
           <span class="unit">/{{ 'billing.month' | translate }}</span>
         </div>
         <pa-button
-          *ngIf="(accountType | async) === 'stash-basic'"
+          *ngIf="(accountType | async) === 'stash-basic' || (accountType | async) === 'stash-trial'"
           kind="primary"
           routerLink="../checkout"
           [queryParams]="{ type: 'stash-developer' }">
           {{ 'billing.upgrade' | translate }}
         </pa-button>
+        <div
+          *ngIf="(accountType | async) === 'stash-developer'"
+          class="subscribed">
+          <pa-icon name="check"></pa-icon>
+          <span class="title-s">{{ 'billing.subscribed' | translate }}</span>
+        </div>
       </th>
       <th class="plan">
         <div class="plan-name">Business</div>
@@ -57,12 +63,36 @@
           <span class="unit">/{{ 'billing.month' | translate }}</span>
         </div>
         <pa-button
-          *ngIf="(accountType | async) === 'stash-basic' || (accountType | async) === 'stash-developer'"
+          *ngIf="(accountType | async) === 'stash-basic' || (accountType | async) === 'stash-trial'"
           kind="primary"
           routerLink="../checkout"
           [queryParams]="{ type: 'stash-business' }">
           {{ 'billing.upgrade' | translate }}
         </pa-button>
+        <div
+          *ngIf="(accountType | async) === 'stash-business'"
+          class="subscribed">
+          <pa-icon name="check"></pa-icon>
+          <span class="title-s">{{ 'billing.subscribed' | translate }}</span>
+        </div>
+      </th>
+      <th class="plan">
+        <div class="plan-name">Enterprise</div>
+        <div class="price">
+          <span class="unit">{{ 'billing.enterprise_ready' | translate }}</span>
+        </div>
+        <pa-button
+          *ngIf="(accountType | async) !== 'stash-enterprise'"
+          kind="primary"
+          (click)="contact()">
+          {{ 'billing.contact' | translate }}
+        </pa-button>
+        <div
+          *ngIf="(accountType | async) === 'stash-enterprise'"
+          class="subscribed">
+          <pa-icon name="check"></pa-icon>
+          <span class="title-s">{{ 'billing.subscribed' | translate }}</span>
+        </div>
       </th>
     </tr>
     <tr>
@@ -70,6 +100,7 @@
       <td>1</td>
       <td>1</td>
       <td>1</td>
+      <td>-</td>
     </tr>
     <tr>
       <td>{{ 'billing.quotas.files' | translate }}</td>
@@ -85,6 +116,7 @@
         <div>{{(prices | async)?.['stash-business'].usage['files'].threshold | number}}</div>
         <div class="unit">{{ 'billing.quotas.up-to' | translate }} 1.5Gb</div>
       </td>
+      <td>-</td>
     </tr>
     <tr>
       <td>{{ 'billing.quotas.medias' | translate }}</td>
@@ -100,6 +132,7 @@
         <div>{{(prices | async)?.['stash-business'].usage['media'].threshold}} {{ 'hours' | translate }}</div>
         <div class="unit">{{ 'billing.quotas.up-to' | translate }} 1.5Gb</div>
       </td>
+      <td>-</td>
     </tr>
     <tr>
       <td>{{ 'billing.quotas.searches' | translate }}</td>
@@ -112,6 +145,7 @@
       <td>
         <div>{{(prices | async)?.['stash-business'].usage['searches'].threshold | number }}</div>
       </td>
+      <td>-</td>
     </tr>
     <tr>
       <td>{{ 'billing.quotas.answers' | translate }}</td>
@@ -124,6 +158,7 @@
       <td>
         <div>{{(prices | async)?.['stash-business'].usage['qa'].threshold | number }}</div>
       </td>
+      <td>-</td>
     </tr>
     <tr>
       <td>{{ 'billing.quotas.training' | translate }}</td>
@@ -140,6 +175,7 @@
           {{(prices | async)?.['stash-business'].usage['training-hours'].threshold | number }} {{ 'hours' | translate }}
         </div>
       </td>
+      <td>-</td>
     </tr>
   </table>
 
@@ -148,7 +184,7 @@
     <div class="body-s">
       {{ 'billing.cost_per_usage.description' | translate }}
     </div>
-    <div>
+    <div class="calculator">
       <pa-button
         *ngIf="isCalculatorEnabled | async"
         (click)="openCalculator()"
@@ -158,7 +194,4 @@
       </pa-button>
     </div>
   </div>
-  <div
-    class="body-s note"
-    [innerHTML]="'billing.customized_plan' | translate"></div>
 </div>
