Account details navigation

--- a/apps/manager-v2/src/app/app-layout/app-layout.component.html
+++ b/apps/manager-v2/src/app/app-layout/app-layout.component.html
@@ -2,7 +2,8 @@
   <img
     width="128"
     src="assets/logos/logo-white.svg"
-    alt="Nuclia" />
+    alt="Nuclia Manager" />
+
   <nav class="title-m">
     <ul>
       <li
