--- a/apps/manager-v2/src/app/app-layout/app-layout.component.scss
+++ b/apps/manager-v2/src/app/app-layout/app-layout.component.scss
@@ -1,7 +1,5 @@
 @import 'variables';
 
-$header-height: rhythm(8);
-
 header {
   align-items: center;
   background: $color-dark-stronger;
@@ -12,27 +10,16 @@ header {
   justify-content: space-between;
   padding: 0 rhythm(2);
 
-  nav {
-    flex: 1 0 auto;
-    ul {
-      display: flex;
-      gap: rhythm(2);
-      list-style: none;
-      margin: 0;
-      padding: 0;
+  nav ul {
+    gap: rhythm(2);
+    li {
+      transition: color $transition-hint;
 
-      li {
-        cursor: pointer;
-        padding: rhythm(1) rhythm(2);
-        transition: color $transition-hint;
-
-        &:hover {
-          color: $color-primary-light;
-        }
-
-        &.active {
-          color: $color-primary-regular;
-        }
+      &:hover {
+        color: $color-primary-light;
+      }
+      &.active {
+        color: $color-primary-regular;
       }
     }
   }
@@ -43,8 +30,6 @@ header {
 }
 
 .page-container {
-  margin: rhythm(2) 0;
-  padding: 0 rhythm(2);
-  max-height: calc(100vh - #{$header-height} - #{rhythm(2)}* 2);
+  max-height: calc(100vh - #{$header-height});
   overflow-y: auto;
 }
