--- a/apps/manager-v2/src/app/manage-accounts/account-list/account-list.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-list/account-list.component.html
@@ -1,42 +1,40 @@
-<div class="filter-container">
-  <pa-input
-    [value]="filter$ | async"
-    (valueChange)="filter$.next($event)">
-    Filter
-  </pa-input>
-</div>
+<div class="wide-table-container">
+  <div class="filter-container">
+    <pa-input
+      [value]="filter$ | async"
+      (valueChange)="filter$.next($event)">
+      Filter
+    </pa-input>
+  </div>
 
-<pa-table columns="repeat(4, 1fr) 96px">
-  <pa-table-header>
-    <pa-table-cell header>Id</pa-table-cell>
-    <pa-table-cell header>Title</pa-table-cell>
-    <pa-table-cell header>Slug</pa-table-cell>
-    <pa-table-cell header>Type</pa-table-cell>
-    <pa-table-cell-menu header></pa-table-cell-menu>
-  </pa-table-header>
-  <pa-table-row *ngFor="let account of accounts$ | async">
-    <pa-table-cell>
-      <small>{{ account.id }}</small>
-    </pa-table-cell>
-    <pa-table-cell>{{ account.title }}</pa-table-cell>
-    <pa-table-cell>{{ account.slug }}</pa-table-cell>
-    <pa-table-cell>{{ account.type }}</pa-table-cell>
-    <pa-table-cell-menu>
-      <pa-button
-        icon="edit"
-        aspect="basic"
-        size="small"
-        [routerLink]="account.slug">
-        Edit account
-      </pa-button>
-      <pa-button
-        icon="trash"
-        aspect="basic"
-        size="small"
-        kind="destructive"
-        (click)="deleteAccount(account)">
-        Delete account
-      </pa-button>
-    </pa-table-cell-menu>
-  </pa-table-row>
-</pa-table>
+  <pa-table columns="repeat(4, 1fr) 96px">
+    <pa-table-header>
+      <pa-table-cell header>Id</pa-table-cell>
+      <pa-table-cell header>Title</pa-table-cell>
+      <pa-table-cell header>Slug</pa-table-cell>
+      <pa-table-cell header>Type</pa-table-cell>
+      <pa-table-cell-menu header></pa-table-cell-menu>
+    </pa-table-header>
+    <pa-table-row
+      *ngFor="let account of accounts$ | async"
+      [routerLink]="account.id"
+      clickable>
+      <pa-table-cell>
+        <small>{{ account.id }}</small>
+      </pa-table-cell>
+      <pa-table-cell>{{ account.title }}</pa-table-cell>
+      <pa-table-cell>{{ account.slug }}</pa-table-cell>
+      <pa-table-cell>{{ account.type }}</pa-table-cell>
+      <pa-table-cell-menu>
+        <pa-button
+          icon="trash"
+          aspect="basic"
+          size="small"
+          kind="destructive"
+          (click)="deleteAccount(account)">
+          Delete account
+        </pa-button>
+      </pa-table-cell-menu>
+    </pa-table-row>
+  </pa-table>
+</div>
