--- a/apps/manager-v2/src/app/manage-accounts/account-list/account-list.component.scss
+++ b/apps/manager-v2/src/app/manage-accounts/account-list/account-list.component.scss
@@ -1,5 +1,10 @@
 @import 'variables';
 
+.wide-table-container {
+  margin: rhythm(2) 0;
+  padding: 0 rhythm(2);
+}
+
 .filter-container {
   padding: rhythm(2) 0;
   max-width: rhythm(40);
