--- a/apps/manager-v2/src/app/app-layout/app-layout.component.scss
+++ b/apps/manager-v2/src/app/app-layout/app-layout.component.scss
@@ -32,4 +32,11 @@ header {
 .page-container {
   max-height: calc(100vh - #{$header-height});
   overflow-y: auto;
+
+  .forbidden-message {
+    background: $color-secondary-regular;
+    font-weight: $font-weight-semi-bold;
+    padding: rhythm(2);
+    text-align: center;
+  }
 }
