--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.scss
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.scss
@@ -26,8 +26,11 @@ h2 {
   font-weight: $font-weight-bold;
   gap: rhythm(1);
 
-  pa-icon.done {
+  pa-icon {
     color: $color-primary-regular;
+    &.disabled {
+      color: $color-dark-stronger;
+    }
   }
 }
 
