Prevent country field change once customer data is saved

--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -140,6 +140,7 @@
             <pa-select
               id="country"
               formControlName="country"
+              [readonly]="!!customer"
               [errorMessages]="errors"
               externalLabel>
               <pa-option
