--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.scss
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.scss
@@ -109,11 +109,16 @@ h2 {
 }
 
 .budget-form {
+
+  .note {
+    color: $color-neutral-regular;
+  }
+
   .budget-input {
     align-items: center;
     display: flex;
     gap: rhythm(1);
-    margin-top: rhythm(2);
+    margin-top: rhythm(3);
   }
 
   pa-input {
