Remove empty space below modals

--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -1,4 +1,6 @@
-<pa-modal-advanced>
+<pa-modal-advanced
+  fitContent
+  fitContentHeight>
   <pa-modal-title>
     <h2>{{ 'billing.budget_calculator' | translate }}</h2>
   </pa-modal-title>
