--- a/apps/dashboard/src/app/account/billing/review/review.component.html
+++ b/apps/dashboard/src/app/account/billing/review/review.component.html
@@ -1,4 +1,4 @@
-<pa-modal-advanced>
+<pa-modal-advanced fitContentHeight>
   <pa-modal-title>
     {{ 'billing.review.title' | translate }}
   </pa-modal-title>
